--- a/dreamweaver.html
+++ b/dreamweaver.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-revised-3-227x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1s" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -244,7 +244,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="uNqYGsM1u3XQ65vp6qVRI58PkaqiRjaftFTuj9AjXYzSDwPIu1u7+L1ZAXEuD6gqvoM08SX2NzBNvM1wmBYM3G6b36aCA+AHMLu4MD9o8PBSZ7KQkTTkPCmQr5sZe7Pn" data-form-email="true">
+                    <input type="hidden" value="OB0eLWmG3TOP4rx35bipgJF+Pr7gNiffDMh+sC2RDt6sekHWLhqLdeqMCS4f8iP1L1vE4H5xvooTvkEqwjOJlqNXaC2s9dG2BZgJ0n9vuEehON/7poksF/BTlBjQ82r+" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
