--- a/illustrator.html
+++ b/illustrator.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-revised-3-227x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1n" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -230,7 +230,7 @@
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/vw-logo-2-2000x2000.jpg">
                         </div><div class="carousel-item">
-                            <img alt="" src="assets/images/aruba-postcard-2-2000x200059.jpg">
+                            <img alt="" src="assets/images/aruba-postcard-2-2000x20003.jpg">
                         </div><div class="carousel-item">
                             <img alt="" src="assets/images/doodle-for-google-website-2000x2000-1.jpg">
                         </div><div class="carousel-item">
@@ -304,7 +304,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="SSx5r/yNjk93IuZaHQvEZjNb0wnKAamkzkoVGs9mY2TcpmMGujqpT8iKNELRQDvI4ycGhPbqzgOZl0yzTyoGChUf48L3byQYG9HrAjuaNb/q+ySpj9IP8ImD3RztgE6p" data-form-email="true">
+                    <input type="hidden" value="6G0vpJYs8HrhTM/SRKFqwaJr51VIR56vvaHpTaKVJnPH6Ia1Fn4afyuiVVAg3N1qlpTRhaywM8XZW3EqZEYphiSlDU8JFiIKaATRf5Cjnz1uKwdbsvIkBg7MJU+Xdp9T" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
