--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-4m" style="background-color: rgb(113, 102, 102); padding-top: 20px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -263,7 +263,7 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/logo-revised-128x128.png"></div>
+                <div><img src="assets/images/logo-revised-3-128x71.jpg"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Address</strong><br>
