--- a/premiere.html
+++ b/premiere.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-revised-3-227x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1q" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -244,7 +244,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="gTWp5sIjH9M1C0vd7uHwp67ujB1a1NEpG8KB0ZnqyOaWHT2/ieUvKVs0DtUWed03Ol0vzsYSLX9Zd8MeVN6YkVjjCahp2FvEKpK2dmMBiPonxfurtA/sTxWl6BvRfuGP" data-form-email="true">
+                    <input type="hidden" value="YKknvNJpH4pdwzxe0fvWDCWwe0ua+DV9gwHNy/+4xN4++WeRVrW/8ahIs7ApW65oURgIvScqKBuh/0uao1kT0Ts4vc63FVn/r7ooFrEeYDl4XnHzHQWDHnJuIPmwQSS3" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
