--- a/reference.html
+++ b/reference.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-revised-3-227x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-after-navbar" id="testimonials1-17" style="background-color: rgb(0, 0, 0); padding-top: 120px; padding-bottom: 120px;">
 
     
 
@@ -149,7 +149,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="NnZqCQm+c0N+01BNNXD2KQEnMw80nby9N+I02o5ffhav9JKwY/aPoGpqOvvgDLhhxMh6o4k2xoPByw9vXZZmzjHgwKE8bU7ZTZoHvdwXsSux0XxfcbNzL/NaGFCrUb4i" data-form-email="true">
+                    <input type="hidden" value="n3t6Fw5z5on9Jzk5u1Lg+BctYVcV5mb7mvai4NWS+A4woRkgHhy8rTU1s8FRJfHfE5e7F8kHEmWK6P3NdW7g6vkIdsh7Zr3a94BwfB4l7RU8iH90jxe3NRk5F9tikFAX" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
