--- a/word.html
+++ b/word.html
@@ -33,7 +33,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-2-256x128.jpg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/logo-revised-3-227x128.jpg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-22" style="background-color: rgb(0, 0, 0); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -122,7 +122,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="apM8X9aB/lXSjRgxlTKb0rzfcFiy7e2sNY/nGH/kR8xoHsFfYcjAZOO3uhG69DlPXnoNVngBP7Q1m4wP7go2lhj35idfolYGK3Fx6cOTZSUk7Tg9dt1rlSJUEFWnaKPJ" data-form-email="true">
+                    <input type="hidden" value="qCXbZW1Z+AxChSoQBhTFu/RPv5b7cfI7akfuGZ5pWchj3kb/1E4f6NMrqhwqkk+ScJXbkpohk6/zuQspu+9kRRSuU/B6XSSEMTss0vIFP4QwvhgwYux9CXiImtnHf4bD" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2j-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2j-name">
