--- a/biography.html
+++ b/biography.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3w" style="background-image: url(assets/images/revised-2000x906.jpg); padding-top: 160px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -175,7 +175,7 @@
                 <div class="col-xs-12 col-lg-10 col-lg-offset-1" data-form-type="formoid">
                     <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thank you for subscribing</div></div>
                     <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="SUBSCRIBE FORM">
-                        <input type="hidden" value="DfrVnyxHWno5+bTAs2Ry+tTwT+A7cpj2M+21R0cbXkoOLTW7u7nAs7Et5yNR7qR3QG+CifHMnRmF9qR2T+z4cq2OiHlz6nnHeQPc/3KSI/I8TXW4rYoRmydSH0nhJVee" data-form-email="true">
+                        <input type="hidden" value="oDqu47KixILvLipTkU8uoyP0ILDUmudiRAauWxk+ZdqMlfqQ1JkyzuibCFhLI9zTHY36o5i24OybZbUnrobSSuE8NpOY/FAaiYGDhG6vTh6O3GgmU8hjQY+Kz8PAGKUK" data-form-email="true">
                         <div class="mbr-subscribe mbr-subscribe-dark input-group">
                             <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email Address..." id="form2-5a-email">
                             <span class="input-group-btn"><button type="submit" class="btn btn-black">SUBSCRIBE</button></span>
@@ -208,7 +208,7 @@ Phone: (786)-239-7707<br><br></p>
                     <div hidden="" data-form-alert-success="true">Your message has been sent</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5aeduZ1qdw7o0HANvw1D4yYxMTPFdCehDQ9MrVwAG59c8CJ8m/6h9ayEgRwlOx5A2g/qeasl0haF2rPuAU1K/Wc+P5tjn9ghTeBbqJ0rWOn+K/RC5RAdjBLkY3mHdsT+" data-form-email="true">
+                    <input type="hidden" value="eUgdIb2fnVsRHvDbNQes7ja7Y6SmFkGTnuh4++FG88xgIsgVPeywf6C3Ln+rh/GDJhuJ1OVgNsR6Chs4VMW6A5zcS5OXsFNN3JoU/+BCak6XuIHJW1w/9xX+VlYAv7b9" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-name">Name<span class="form-asterisk">*</span></label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-2p-name">
